# cbc-population-distributions

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: pre-commit.disabled
cbc_population_distributions/: mass.py  population_driver.py  population_sampler.py  spin.py
docs/: conf.py  index.rst
docs/guide/: hyperparameters.rst  hyperparams_table.rst  index.rst  setup.rst
docs/install/: index.rst  install.rst
scripts/: bp2p_hyperparams.py  get_hyperparams.py  hyperparams_table.tex  quick_start.ipynb
test/: test_population_driver.py
